Brush Texture ColorRamp Broken #59110

Closed
opened 2018-12-10 09:20:37 +01:00 by Dong-Hyun Kim · 6 comments
Member

System Information
Operating system: Windows 10 64bit Home version 1803
Graphics card: NVIDIA Geforce GTX 960M

Blender Version
Broken: 2.79b release (also broken in 2.80 beta 0f5b53ba4d )
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional) Use the texture node editor

Short description of error
When you color ramp the brush texture in the properties editor, the whole texture just goes solid color(which is at the position of 1)instead of manipulating colors.

Exact steps for others to reproduce the error
untitled.blend

  1. Go to Properties Editor - Textures Tab - (Select "Brush Mask" texture option, and then "Texture color ramped" data block) - Colors Panel - (Check "Ramp")
  2. In the file, the color ramp is already set from white to black, which should invert the image texture. However, the preview just show solid color.
  3. Texture without color ramp is also included in the file as well, just to ensure that image texture is packed into the file properly.
**System Information** Operating system: Windows 10 64bit Home version 1803 Graphics card: NVIDIA Geforce GTX 960M **Blender Version** Broken: 2.79b release (also broken in 2.80 beta 0f5b53ba4dc ) (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) Use the texture node editor **Short description of error** When you color ramp the brush texture in the properties editor, the whole texture just goes solid color(which is at the position of 1)instead of manipulating colors. **Exact steps for others to reproduce the error** [untitled.blend](https://archive.blender.org/developer/F5907988/untitled.blend) 1. Go to Properties Editor - Textures Tab - (Select "Brush Mask" texture option, and then "Texture color ramped" data block) - Colors Panel - (Check "Ramp") 2. In the file, the color ramp is already set from white to black, which should invert the image texture. However, the preview just show solid color. 3. Texture without color ramp is also included in the file as well, just to ensure that image texture is packed into the file properly.
Author
Member

Added subscriber: @temeddix

Added subscriber: @temeddix

#72702 was marked as duplicate of this issue

#72702 was marked as duplicate of this issue
Campbell Barton was assigned by Sebastian Parborg 2018-12-10 12:01:49 +01:00
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:35:40 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscribers: @Vyach, @mano-wii

Added subscribers: @Vyach, @mano-wii

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Campbell Barton self-assigned this 2020-05-21 15:06:36 +02:00

Calculate Alpha is needed, updated tooltip.

Calculate Alpha is needed, updated tooltip.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59110
No description provided.