Docs: note that the color-ramp uses image alpha

Avoid misunderstanding from T59110